Se usa los seq